arch/servicemesh/11-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: project-destination-rule-v1
spec:
  host: hello-service-v1
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: project-destination-rule-v2
spec:
  host: hello-service-v2
  subsets:
    - name: v2
      labels:
        version: v2
