arch/servicemesh/12-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress
spec:
  hosts:
    - "arch.homework"
  gateways:
    - project-gateway
  http:
    - match:
#        - uri:
#            regex: /
        - headers:
            x-region:
              exact: us-east
      route:
        - destination:
            host: hello-service-v1
            subset: v1
            port:
              number: 8081
    - route:
      - destination:
          host: hello-service-v2
          subset: v2
          port:
            number: 8081
